--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -22,7 +22,7 @@ body {
 .page-header {
     background-color: #3A1FB2;
     margin-top: 0;
-    padding: 20px 20px 20px 40px;
+    padding: 20px 20px 35px 40px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
@@ -36,8 +36,21 @@ body {
     margin-left: 30px;
 }
 
+.post-form textarea, .post-form input {
+    width: 100%;
+}
 
+.save, .edit {
+    float: right;
+}
+
+.top-menu, .top-menu:hover, .top-menu:visited {
+    color: #EBEBEB;
+    font-size: 24px;
+    float: right;
+    margin-right: 20px;
+}
 
 .post {
-    margin-bottom: 70px;
+    margin-bottom: 60px;
 }
