--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -5,8 +5,12 @@
         {% if post.published_date %}
             <div class="date">
                 Опубликовано: {{ post.published_date }}
+                {% if user.is_authenticated %}
+                    <a class="edit btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+                {% endif %}
             </div>
         {% endif %}
+
         <h2>{{ post.title }}</h2>
         <p class="txt">{{ post.text|linebreaksbr }}</p>
     </div>
