--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -14,7 +14,7 @@
             {% if user.is_authenticated %}
                 <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus-sign"></span></a>
             {% endif %}
-            <h1><a href="/">My second blog</a></h1>
+            <h1><a href="/">Тестовый блог на Django</a></h1>
         </div>
 
         <div class="content container">
