--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,7 +4,8 @@
     <div class="post">
         {% if post.published_date %}
             <div class="date">
-                Опубликовано: {{ post.published_date }}
+                Опубликовано: {{ post.published_date }} <br>
+                Автор: {{ post.author }}
                 {% if user.is_authenticated %}
                     <a class="edit btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
                 {% endif %}
