--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,10 +4,11 @@
     {% for post in posts %}
         <div class="post">
             <div class="date">
-                Опубликовано: {{ post.published_date }}
+                Опубликовано: {{ post.published_date }} - {{ post.author }}
             </div>
             <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
-            <p class="txt">{{ post.text|linebreaksbr }}</p>
+            <p class="txt">{{ post.text|linebreaksbr|truncatewords:20 }} <a href="{% url 'post_detail' pk=post.pk %}"><span class="glyphicon glyphicon-arrow-right"></a>
+            </p>
         </div>
     {% endfor %}
 {% endblock %}
