--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,7 +12,7 @@
     <body>
         <div class="page-header">
             {% if user.is_authenticated %}
-                <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus-sign"></span></a>
+                <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus-sign"></a>
             {% endif %}
             <h1><a href="/">Тестовый блог на Django</a></h1>
         </div>
